RtcVideoEncoder: use the timestamp from encoder.

Fallback to the current time if the timestamp from the encoder
callback is 0.

BUG=chromium:620565
TEST=Run apprtc loopback on oak.

Review-Url: https://codereview.chromium.org/2105683002
Cr-Commit-Position: refs/heads/master@{#403423}

Former-commit-id: a31c66943657af646c8baaaab4ce42bb0f650931